@@ -3,3 +3,21 @@
 ("abc", "123")
 ([1, 2], [3, 4, 5])
 ([1, 2], [3, 4, 5])
+ello! here's the thing
+22
+0
+用的依赖类
+Idris
+[]
+is 是一个通用
+8
+is 是一个通用的依赖类型纯函数式编程语言，其类型系统与 Agda 以及 Epigram 相似。
+48
+Idris 是一个通用的依赖类型纯函
+18
+is is a 
+8
+is is a general-purpose purely functional programming language with dependent types. 
+85
+Idris is a general
+18
