@@ -1,0 +1,2 @@
+Idris 是一个通用的依赖类型纯函数式编程语言，其类型系统与 Agda 以及 Epigram 相似。
+Idris is a general-purpose purely functional programming language with dependent types. 
