@@ -7,6 +7,8 @@ Language updates
 * Improved unification by implementing a pattern unification rule
 * The syntax `{{n}} quotes n without resolving it, allowing short syntax
   for defining new names. `{n} still quotes n to an existing name in scope.
+* A new primitive operator prim__strSubstr for more efficient extraction of
+  substrings. External code generators should implement this.
 
 Library updates
 ---------------
